syntax = "proto2";

// there is no package on purpose as we wish to use the generated types for
// the robot code in order to avoid having to synchronize internal types
// with communication types. It's an architectureal coupling done on purpose

enum eDir{
    UNDEFINED     =  0;
    FORWARD       =  1;
    BACKWARD      = -1;
}

enum eColor {
    UNKNOWN          = 0;
    PREF             = 1;
    SYM              = 2;
}

enum eNavState {
    IDLE              = 0;
    FACING_DEST       = 1;
    GOING_TO_TARGET   = 2;
    TURNING_AT_TARGET = 3;
    STOPPING          = 4;
    WAIT_OPP_MOVE     = 5;
    FACING_WALL       = 6;
    CONTACTING_WALL   = 7;
    ESCAPING_WALL     = 8;
    WAIT_OPP_ESCAPE_RECALL = 9;
}

enum eNavOrder {
    NOTHING          = 0;
    GOTO             = 1;
    GOTO_CAP         = 2;
    STOP             = 3;
    RECAL_FACE       = 4;
    RECAL_REAR       = 5;
}

enum eLogLevel {
    DEBUG             = 0;
    INFO              = 1;
    ERROR             = 2;
    ASSERT            = 3;
}

// Specific 2017
enum eObjectColor {
    UNDEF            = 0;
    YELLOW           = 1;
    BLUE             = 2;
    WHITE            = 3;
}

// Specific 2017
enum eTableBorder {
    TOP_Y           = 0;
    OWN_SIDE_X      = 1;
    OPP_SIDE_X      = 2;
    START_AREA_Y    = 3;
    BOT_Y           = 4;
    START_AREA_X    = 5;
}

